# ZindiLacunaMalaria

./: .gitignore  README.md  main.py  multi_agent.sh  posprocess_config.yaml  postprocess.py  pp_test.py  pyproject.toml  train_and_infer.py
config_files/detr_train_config_files/: detr_config.yaml
config_files/yolo_train_config_files/: yolo11m_config.yaml
cv_sweep/: infer.py  postprocess.py  sweep_postprocess.py
data/: neg_preds.csv
data/csv_files/: NEG_OR_NOT.csv  split_assignment.csv
data/predictions/yol/: yolens.py
inference/: inference_neg_model.py  tta.py
inference/detr/: inference_detr.py  inference_detr_models.py
inference/detr/core/: infer.py  map.py  soap.py  transforms.py  utils.py
inference/detr/core/datasets/: detr_dataset.py
inference/yolo/: inference_yolo_models.py
parameters/postprocessing_config_files/: base_pp.yaml  class_specific_sweep.yaml  ensemble.yaml  sweep.yaml  sweep_ensemble.yaml  vocal_sweep_53.yaml
parameters/postprocessing_config_files/yolo_postprocessing/: yolo_pp.yaml
postprocessing/: class_specific_sweep.py  ensemble.py  postprocess.py  postprocess_functions.py  postprocessing.py  pp_ensemble_pipeline.py  pp_sweep.py  sweep.py  tta_postprocessor.py
preprocessing/: dataset_yolo_format.py  filter_boxes.py
testing/: test_tta_augs.py
training/: train_neg_model.py
training/detr/: train_detr_models.py
training/detr/core/: constants.py  model.py  train.py  utils.py
training/yolo/: train_yolo_models.py
util/: ensemble.py  mAP_zindi.py  map.py  nms.py  random_nms.py  save.py  score_on_val.py  wbf.py  yaml_structuring.py
