[project]
name = "lacunamalaria"
version = "0.1.0"
description = "Epoch. Lacuna Malaria competition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    
     # Machine Learning Basics
    
     "numpy>=1.26.2",
    
     "pandas>=2.1.4",
    
     "scikit-learn>=1.5.1",
    
     "scikit-image>=0.22.0",
    
     "scipy>=1.11.4",
    
     "tqdm>=4.66.5",
    
     "polars>=0.19.19",
    
     # PyTorch
    
     "torch==2.4.0",
    
     "torchaudio==2.4.0",
    
     "torchvision==0.19.0",
    
     "kornia>=0.7.3",
    
     "einops>=0.8.0",
    
     "segmentation-models-pytorch>=0.3.4",
    
     # Visualizations
    
     "matplotlib>=3.9.2",
    
     "seaborn>=0.13.2",
    
     # Data Augmentation
    
     "albumentations>=1.4.14",
    
     #Weights and Biases
    
     "wandb>=0.17.8",
    
     #Notebook
    
     "jupyter>=1.1.1",
    
     "snakeviz>=2.2.0",
    
     "torchmetrics[detection]>=1.4.1",
    
     "pycocotools>=2.0.8",
]
[tool.mypy]
exclude = ["venv/", ".cache"]
allow_untyped_calls = true
disable_error_code = ["import-untyped"]
python-version = "3.10"
