[project]
name = "zindilacunamalaria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "ema-pytorch>=0.7.3",
    "kornia>=0.7.4",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.2",
    "ultralytics>=8.3.23",
    "wandb>=0.18.5",
]
